# ImGui-Inject-Android

./: settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/arm64-v8a/: AndKittyInjector
app/src/main/assets/armeabi-v7a/: AndKittyInjector
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/Client/: Icon.h  client.cpp
app/src/main/cpp/Server/: ESP.h  Offsets.h  Server.cpp
app/src/main/cpp/Utils/: Utils.h
app/src/main/java/gamingbd/pro/: FloatingViewService.java  MainActivity.java  Native.java  Utils.java
gradle/wrapper/: gradle-wrapper.properties
